# icc-poo

./: .gitignore  ANSWERS.md  COMMITS.git  DESIGN.md  LOG.md  README.md  benches.xml  main.py  pyproject.toml
.github/workflows/: tests.yml
assets/maps/: map1.txt  map2.txt  map3.txt  map4.txt  map5.txt
src/: derivatives.py  gameview.py  main.py  rational.py  temp.py
src/entities/: coin.py  evlistener.py  gameobject.py  gates_lever.py  lava.py  monster.py  player.py  wall.py
src/res/: array2d.py  camera.py  map.py
tests/: conftest.py  derivatives_test.py  rational_test.py  test_bench.py  test_coins.py  test_interactions.py  test_levers.py  test_map.py  test_platforms.py
