[project]
name = "icc-poo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcade>=3.0.2",
    "munch>=4.0.0",
    "pyyaml>=6.0.2",
]

[tool.mypy]
strict = true

[tool.pyright] # Pyright super() call (cf. #6633)
reportUnknownMemberType = false

[dependency-groups]
dev = [
    "mypy>=1.15.0",
 "pytest>=8.3.4",
 "pytest-cov>=6.0.0",
 "types-pyyaml>=6.0.12.20250402",
]
